--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,30 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
   <body>
-    <%= yield %>
+        <% if !current_user %>
+          <a class="navbar-brand" href="<%= new_user_path %>"/>Sign Up</a>
+          <%= link_to "Log in", signin_path, class:"navbar-brand" %>
+        <% end %>
+        <% if current_user %>
+          <%= link_to "#{current_user.email}'s profile", user_path(current_user), class:"navbar-brand"%>
+          <%= link_to "Log Out", sessions_path, class:"navbar-brand",method:'delete' %>
+        <% end %>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+
+          </ul>
+        </div><
+      </div>
+    </div>
+
+    <div class="container"  role="main">
+      <% if flash[:notice] %>
+        <%= flash[:notice] %>
+      <% end %>
+      
+      <%= yield %>
+    </div>
   </body>
 </html>
