--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,12 +13,14 @@
       <% if current_user %>
       <ul>
       <li><%= current_user.email %></li>
+      <li><%= link_to "Add a Recipe", new_cocktail_path%></li>
+      <li><%= link_to "View all Recipes", cocktails_path %></li>
       <li><%= link_to "Log out", logout_path, method: "delete" %></li>
       </ul>
       <% else %>
       <ul>
-      <li><%= link_to "Login", 'login' %></a></li>
-      <li><%= link_to "Signup", 'signup' %></a></li>
+      <li><%= link_to "Login", login_path %></a></li>
+      <li><%= link_to "Signup", signup_path %></a></li>
       </ul>
       <% end %>
 
