--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,14 +13,14 @@
       <% if current_user %>
       <ul>
       <li><%= current_user.email %></li>
-      <li><%= link_to "Add a Recipe", new_cocktail_path%></li>
-      <li><%= link_to "View all Recipes", cocktails_path %></li>
-      <li><%= link_to "Log out", logout_path, method: "delete" %></li>
+      <%= link_to "Add a Recipe", new_cocktail_path%> |
+      <%= link_to "View all Recipes", cocktails_path %> |
+      <%= link_to "Log out", logout_path, method: "delete" %>
       </ul>
       <% else %>
       <ul>
-      <li><%= link_to "Login", login_path %></a></li>
-      <li><%= link_to "Signup", signup_path %></a></li>
+      <%= link_to "Login", login_path %></a> |
+      <%= link_to "Signup", signup_path %></a>
       </ul>
       <% end %>
 
@@ -31,5 +31,9 @@
       
       <%= yield %>
     </div>
+
+    <footer class="footer fixed-bottom">
+      <span class="text-muted small mb-0">© Copyright 2021 Bar Trainer</span>
+</footer>
   </body>
 </html>
