--- a/app/views/cocktails/_form.html.erb
+++ b/app/views/cocktails/_form.html.erb
@@ -5,12 +5,13 @@
         <% end %>
     </ul>
 <%end%>
+
 <%= f.text_field :name, label: "Cocktail Name"%>
 <%= f.text_field :instructions, label: "Mixing Directions"%>
 
 <h3> Ingredients:</h3>
 
-<%= f.fields_for :cocktail_ingredients do |ci|%>
+<%= f.fields_for :recipes do |ci|%>
     <div class="row">
         <div class="col">
             <%= ci.text_field :quantity%>
