--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,1 +1,6 @@
-<h1> Add a new Recipe </h1>
+<h1> Add a new Cocktail </h1>
+    <%= bootstrap_form_for @cocktail do |f|%>
+     <%= render partial: "form", locals: {cocktail: @cocktail, f: f} %>
+        <%= f.submit "Create Cocktail", class: "btn btn-primary"%>
+        <%= link_to "Cancel", user_path(current_user), class: "btn btn-danger"%>
+    <%end%>
