--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,21 +1,22 @@
- <h3> <%= @cocktail.name %>
+ <h3> <%= @cocktail.name %> 
+ <h4> Recipe by : <%= @cocktail.user.email %>
 
     <% if @cocktail.user_id == current_user.id %>
         <hr>
-        <a class="btn btn-primary" <%= link_to "Edit Cocktail", edit_user_cocktail_path(current_user.id, @cocktail.id)%> </a>
+        <a class="btn btn-primary" <%= link_to "Edit Cocktail", edit_user_cocktail_path(current_user.id, @cocktail.id)%> </a> |
         <a class="btn btn-primary" <%= link_to "Delete Cocktail", user_cocktail_path(current_user.id, @cocktail), :method => :delete%> </a>
         <% end %>
 
  <h4> Directions : </h4> <p> <%= @cocktail.instructions %> </p>
 
-  <% @cocktail.recipes.each do |r| %>  
-                <tr>
+ <h4> Ingredients :
+ <p>
+  <% @cocktail.recipes.each do |r| %>
                     <% if r.quantity%>
-                 
-                        <td><%= r.quantity %></td> 
+                        <%= r.quantity %>
                     <% end %>
                     <% if r.ingredient.name%>
-                        <td><%= r.ingredient.name.capitalize %></td>
+                        <%= r.ingredient.name.capitalize %>
+                        <p>
                     <% end %>
-                </tr>
             <%end%>
