--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
+      
       <% if current_user %>
       <ul>
       <li><%= current_user.email %></li>
@@ -20,7 +21,8 @@
       <% else %>
       <ul>
       <%= link_to "Login", login_path %></a> |
-      <%= link_to "Signup", signup_path %></a>
+      <%= link_to "Signup", signup_path %></a> |
+      <%= button_to "Log in with Google", '/auth/google_oauth2' %>
       </ul>
       <% end %>
 
