--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,8 +1,6 @@
 <h1> All Cocktails </h1>
-
-<% @cocktails.each do |c| %>
-
+<% @cocktails.each do |cocktail| %>
 <p>
-<%= link_to c.name, cocktail_path(c)%>
+<%= link_to cocktail.name, cocktail_path(cocktail) %>
+ <%end%>
 <p>
-    <%end%>
