--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
+      <h1> Bar Trainer </h1>
       
       <% if current_user %>
       <ul>
@@ -19,11 +20,9 @@
       <%= link_to "Log out", logout_path, method: "delete" %>
       </ul>
       <% else %>
-      <ul>
       <%= link_to "Login", login_path %></a> |
       <%= link_to "Signup", signup_path %></a> |
       <%= button_to "Log in with Google", '/auth/google_oauth2' %>
-      </ul>
       <% end %>
 
     <div class="container"  role="main">
