--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,6 +1,6 @@
 <h2> All Cocktails </h2>
 <% @cocktails.each do |cocktail| %>
 <p>
-<%= link_to cocktail.name, cocktail_path(cocktail) %> "Recipe By:" <%= cocktail.user.email %>
+<%= link_to cocktail.name, cocktail_path(cocktail) %> "Recipe By:" <%= link_to cocktail.user.email, user_cocktails_path(cocktail.user.id) %>
  <%end%>
 <p>
