working form for comments everything works except persisting comments

--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -23,3 +23,7 @@
                         <p>
                     <% end %>
             <%end%>
+
+  <%= link_to "Add a comment to this cocktail", new_cocktail_comment_path(@cocktail) %>
+
+  <%= @comments %>
