--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       <% if current_user %>
       <ul>
       <li><%= current_user.email %></li>
-      <%= link_to "Add a new Cocktail", new_user_cocktail_path(current_user)%> |
+      <%= link_to "Add a new Cocktail", new_cocktail_path(current_user)%> |
       <%= link_to "View all my Recipes", user_cocktails_path(current_user) %> |
       <%= link_to "View all Cocktails", cocktails_path %> |
       <%= link_to "Log out", logout_path, method: "delete" %>
