--- a/app/views/users/cocktails.html.erb
+++ b/app/views/users/cocktails.html.erb
@@ -4,7 +4,7 @@
 <h2> All my Cocktails </h2> 
 <% end %>
 
-<% current_user.cocktails.each do |c| %>
+<% @user.cocktails.each do |c| %>
 <p>
 <%= link_to c.name, cocktail_path(c) %> Recipe By: <%= link_to c.user.email, user_cocktails_path(@user) %>
  <%end%> 
