--- a/app/views/cocktails/_form.html.erb
+++ b/app/views/cocktails/_form.html.erb
@@ -6,11 +6,11 @@
     </ul>
 <%end%>
 
-<%= f.text_field :name, label: "Cocktail Name"%>
-<%= f.text_field :instructions, label: "Mixing Directions"%>
-<%= f.text_field :glassware, label: "Glassware"%>
-<%= f.text_field :ice_type, label: "Ice Type"%>
-<%= f.text_field :garnish, label: "Garnish"%>
+<%= f.text_field :name, label: "Cocktail Name:"%>
+<%= f.text_field :instructions, label: "Mixing Directions:"%>
+<%= f.text_field :glassware, label: "Glassware:"%>
+<%= f.text_field :ice_type, label: "Ice Type:"%>
+<%= f.text_field :garnish, label: "Garnish:"%>
 
 <h3> Ingredients:</h3>
 
